--- a/src/main/resources/webroot/index.html
+++ b/src/main/resources/webroot/index.html
@@ -126,7 +126,7 @@
     This management interface invokes the CRUD service endpoint, that interact with a PosgreSQL database using JDBC
     .</p>
 
-  <h3>Add/Edit a fruit</h3>
+  <h3>Add/Edit an organic fruit</h3>
 
   <form ng-submit="update()">
     <div class="row">
